cmake_minimum_required(VERSION 2.8)
project(aws-cloudhsm-pkcs11-examples)

SET(ORGANIZATION_NAME "Amazon.com, Inc.")
IF (MSVC)
  SET(CMAKE_C_FLAGS "/W3 /WX /J /std:c11 /Wv:18")
ELSE()
  SET(CMAKE_C_FLAGS "-Wall -Werror -Wno-pointer-sign -fno-signed-char -std=c99")
ENDIF()

ENABLE_TESTING()

include_directories(include/pkcs11/v2.40)
include_directories(include/gopt)
include_directories(src/common)

add_subdirectory(src/common)
add_subdirectory(src/digest)
add_subdirectory(src/generate)
add_subdirectory(src/sign)
add_subdirectory(src/encrypt)
add_subdirectory(src/wrapping)
add_subdirectory(src/mechanism_info)
add_subdirectory(src/attributes)
add_subdirectory(src/destroy)
add_subdirectory(src/find_objects)
add_subdirectory(src/derivation)
add_subdirectory(src/generate_random)
add_subdirectory(src/session)

IF(LINUX)
  add_subdirectory(src/tools)
ENDIF()